--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,6 @@ dependencies:
   # https://pub.dev/packages/connectivity
   connectivity: ^0.4.8+6
 
-  # Random Color Generator - []
-  # https://pub.dev/packages/random_color
-  random_color: ^1.0.5
-
 
   # Firebase Crashlytics - []
   # https://pub.dev/packages/firebase_crashlytics
@@ -47,10 +43,26 @@ dependencies:
   firebase_crashlytics: ^0.1.3+3
 
 
-  # URL Launcher - []
+  # scrollable_positioned_list  - []
+  # https://pub.dev/packages/scrollable_positioned_list
+
+  scrollable_positioned_list: ^0.1.6
+
+  # Package Info - []
+  # https://pub.dev/packages/package_info
+
+  package_info: ^0.4.1
+
+  # Share - []
+  # https://pub.dev/packages/share
+
+  share: ^0.6.4+3
+
+  # Url Launcer - []
   # https://pub.dev/packages/url_launcher
 
-  url_launcher: ^5.4.11
+  url_launcher: ^5.5.0
+
 
 dev_dependencies:
   flutter_test:
